--- a/edicao.html
+++ b/edicao.html
@@ -1,27 +1,28 @@
 ---
-title: Edição 2018
+title: Edição 2019
 ---
 
 <!-- Cronograma -->
-<section>
-    <div class="container">
-        <h3>
-            <span class="date">1º/AGO</span> - Abertura de Inscrições</h3>
-        <p></p>
-    </div>
-</section>
-
-<hr />
 
 <section>
     <div class="container">
-        <h3>
-            <span class="date">24/SET</span> - Liberação dos Guias de Estudos</h3>
-        <p style="text-align:center;">Para mais informações confira a sessão "Comitês"</p>
+        <h3 class="titulo-texto">datas relevantes</h3>
+        <p>23/06 abertura das incrições regulares</p>
+        <p>28/06 abertura das inscrições tardias </p>
+        <p>15/08 liberação do guia dos estudos </p>
+        <p>05/09 início do USPMUN</p>
     </div>
-</section>
 
-<hr />
+     <div class="container">
+        <h3 class="titulo-texto">endereços relevantes</h3>
+        <p> Faculdade de Economia, Administração, Contabilidade e Ciências Atuariais da USP (FEA-USP) </p>
+        <p>1202, Av. Professor Luciano Gualberto, Butantã, São Paulo, SP</p>
+         <br>
+        <p>Faculdade de Direito do Largo do São Francisco (FDUSP)</p>
+        <p>Largo São Francisco, 95 - Centro, São Paulo, SP</p>
+    </div> 
+    <br />
+</section>
 
 <section>
     <div class="container">
@@ -32,8 +33,8 @@ title: Edição 2018
 
 
     <div class="container">
-        <h4 class="titulo-texto">
-            <span class="date">11/OUT</span> - QUINTA-FEIRA
+       <h4 class="titulo-texto">
+            <span class="date">(05/09)</span> - quinta
         </h4>
 
         <ul>
@@ -44,7 +45,7 @@ title: Edição 2018
                 <span class="date">16:30 - 18:30</span>: Mock + Passagem de Regras (FDUSP)
             </li>
             <li>
-                <span class="date">20:00 - 22:00</span>: Abertura + Coquetel (FDUSP)
+                <span class="date">20:00 - 22:00 </span>: Abertura + Coquetel (FDUSP)
             </li>
         </ul>
     </div>
@@ -53,172 +54,107 @@ title: Edição 2018
 
     <div class="container">
         <h4 class="titulo-texto">
-            <span class="date">12/OUT</span> - SEXTA-FEIRA
+            <span class="date">(06/09)</span> - sexta
         </h4>
 
         <ul>
             <li>
-                <span class="date">08:30 - 12:00</span>: 1ª Sessão (FEA)
+                <span class="date">08:30 - 12:00 </span>: 1º sessão (FEA)
             </li>
             <li>
                 <span class="date">12:00 - 13:30</span>: Almoço (FEA)
             </li>
             <li>
-                <span class="date">13:30 - 16:00</span>: 2ª Sessão (FEA)
+                <span class="date">13:30 - 16:00 </span>: 2º sessão (FEA)
             </li>
             <li>
-                <span class="date">16:00 - 16:30</span>: 30 minutes Break (FEA)
+                <span class="date">16:00 - 16:30 </span>: 30 min de Break (FEA)
             </li>
             <li>
-                <span class="date">16:30 - 18:00</span>: 3ª Sessão (FEA)
+                <span class="date">16:30 - 18:00 </span>: 3º sessão (FEA)
             </li>
             <li>
-                <span class="date">18:10 - 18:40</span>: Quiz (Vivência da FEA)
+                <span class="date">18:10 - 18:30 </span>: Quiz (Vivência da FEA)
             </li>
             <li>
-                <span class="date">18:30 - 19:30</span>: Reunião Chefe de Delegação (Restaurante Minerva da Poli)
+                <span class="date">18:30 - 19:30 </span>: Reunião Chefe de Delegação (Restaurante Minerva da Poli)
             </li>
             <li>
-                <span class="date">18:30 - 00:00</span>: Festa da Democracia (Vivência da FEA)
+                <span class="date">18:30 - 00:00 </span>: Festa da Democracia (Vivência da FEA)
             </li>
         </ul>
     </div>
 
     <br />
-
-    <div class="container">
+    
+     <div class="container">
         <h4 class="titulo-texto">
-            <span class="date">13/OUT</span> - SÁBADO
+            <span class="date">(07/09)</span> - sábado
         </h4>
 
         <ul>
             <li>
-                <span class="date">09:00 - 12:00</span>: 4ª Sessão (FEA)
+                <span class="date">08:30 - 12:00 </span>: 1º sessão (FEA)
             </li>
             <li>
                 <span class="date">12:00 - 13:30</span>: Almoço (FEA)
             </li>
             <li>
-                <span class="date">13:30 - 15:30</span>: 5ª Sessão (FEA)
+                <span class="date">13:30 - 16:00 </span>: 2º sessão (FEA)
             </li>
             <li>
-                <span class="date">15:30 - 16:00</span>: 30 minutes Break (FEA)
+                <span class="date">16:00 - 16:30 </span>: 30 min de Break (FEA)
             </li>
             <li>
-                <span class="date">16:00 - 18:00</span>: 6ª Sessão (FEA)
+                <span class="date">16:30 - 18:00 </span>: 3º sessão (FEA)
             </li>
             <li>
-                <span class="date">18:30 - 19:15</span>: Reunião Chefe de Delegação (Restaurante Minerva da Poli)
+                <span class="date">18:10 - 18:30 </span>: Quiz (Vivência da FEA)
             </li>
             <li>
-                <span class="date">21:00 - 04:00</span>: Main Party (#Descubra)
+                <span class="date">18:30 - 19:30 </span>: Reunião Chefe de Delegação (Restaurante Minerva da Poli)
+            </li>
+            <li>
+                <span class="date">18:30 - 00:00 </span>: Festa da Democracia (Vivência da FEA)
             </li>
         </ul>
     </div>
 
     <br />
-
-    <div class="container">
+    
+     <div class="container">
         <h4 class="titulo-texto">
-            <span class="date">14/OUT</span> - DOMINGO
+            <span class="date">(08/09)</span> - domingo
         </h4>
 
         <ul>
             <li>
-                <span class="date">08:00 - 11:00</span>: Tour por SP (Av. Paulista)
+                <span class="date">08:30 - 12:00 </span>: 1º sessão (FEA)
             </li>
             <li>
-                <span class="date">11:00 - 12:00</span>: Almoço (FEA)
+                <span class="date">12:00 - 13:30</span>: Almoço (FEA)
             </li>
             <li>
-                <span class="date">12:00 - 15:30</span>: 7ª Sessão (FEA)
+                <span class="date">13:30 - 16:00 </span>: 2º sessão (FEA)
             </li>
             <li>
-                <span class="date">15:30 - 16:15</span>: Feedback (FEA)
+                <span class="date">16:00 - 16:30 </span>: 30 min de Break (FEA)
             </li>
             <li>
-                <span class="date">16:30 - 18:00</span>: Encerramento (FEA)
+                <span class="date">16:30 - 18:00 </span>: 3º sessão (FEA)
             </li>
             <li>
-                <span class="date">19:00</span>: Farewell Party (#Descubra)
+                <span class="date">18:10 - 18:30 </span>: Quiz (Vivência da FEA)
+            </li>
+            <li>
+                <span class="date">18:30 - 19:30 </span>: Reunião Chefe de Delegação (Restaurante Minerva da Poli)
+            </li>
+            <li>
+                <span class="date">18:30 - 00:00 </span>: Festa da Democracia (Vivência da FEA)
             </li>
         </ul>
     </div>
-</section>
+
+    <br />
 
 <hr />
-
-<section>
-    <div class="container">
-        <h3 class="titulo-texto">EVENTOS SOCIAIS</h3>
-        <p>Alguns eventos sociais fazem parte do cronograma oficial da USPMUN 2018.</p>
-        <p>São os momentos tão esperados depois de tantas horas de negociação e representações diplomáticas. Não fique
-            de fora:
-            afrouxe a gravata, coloque um sapato mais confortável e venha apreciar a integração universitária, com boas
-            bebidas e
-            música.
-        </p>
-    </div>
-
-    <br />
-
-    <div class="container">
-        <h4 class="titulo-texto">
-            <span class="date">11/OUT</span> - Primeiro encontro: Happy Hour</h4>
-        <p>Como todo bom happy hour o nosso não será diferente: momento ideal para relaxar, conversar sobre qualquer
-            coisa que
-            não o trabalho e fazer novas amizades. A ideia principal é dar o pontapé inicial e promover a integração dos
-            delegados
-            dos diferentes comitês.</p>
-    </div>
-
-    <br />
-
-    <div class="container">
-        <h4 class="titulo-texto">
-            <span class="date">12/OUT</span> - Segundo encontro: Main Party</h4>
-        <p>Preste atenção na oportunidade a seguir. O nosso segundo encontro será fora da universidade. Aliás, você já
-            conhece
-            São Paulo? Não!? Nosso segundo encontro será em um dos pontos mais agitados e simbólicos da vida noturna
-            paulistana. Você
-            consegue imaginar de qual lugar estamos falando?</p>
-    </div>
-
-    <br />
-
-    <div class="container">
-        <h4 class="titulo-texto">
-            <span class="date">13/OUT</span> - Terceiro encontro: Eternamente Farewell Party</h4>
-        <blockquote class="blockquote">
-            <p class="text-center">“Só o que é bom dura tempo o bastante pra se tornar inesquecível”</p>
-            <p class="blockquote-footer text-white-50 text-right">
-                Chorão - Charlie Brown Jr.
-            </p>
-        </blockquote>
-        <p>É com este pensamento (de um filósofo contemporâneo) que nos despedimos dessa edição. Vai deixar saudades?
-            Ahhh se vai,
-            mas enquanto a edição 2019 não chega vamos comemorar.</p>
-    </div>
-
-    <br />
-
-    <div class="container">
-        <h4 class="titulo-texto">
-            <span class="date">14/OUT</span> - Último encontro: PIZZA!</h4>
-        <p>O nosso último momento juntos será mais tranquilo e não vamos deixar vocês irem embora sem conhecer nosso
-            prato típico.
-            É isso mesmo, PIZZA! Aliás, você estará contribuindo para que passemos New York como cidade que mais come
-            pizza no mundo.
-            USPMUN é sinônimo de oportunidades, não é?</p>
-    </div>
-</section>
-
-<hr />
-
-<section>
-    <div class="container center">
-        <div class="text-center button-area">
-            <a href="/secretariado.html" class="btn btn-info btn-lg">Conheça o Secretariado</a>
-        </div>
-    </div>
-</section>
